# learn-rust

./: .ignore  Cargo.toml  README.md  rust-toolchain
.github/: dependabot.yml
.github/workflows/: rust.yml
algorithms/: Cargo.toml
algorithms/A101-symmetric-tree/: Cargo.toml
algorithms/A108-convert-sorted-array-to-binary-search-tree/: Cargo.toml
algorithms/A67-add-binary/: Cargo.toml
algorithms/A69-sqrtx/: Cargo.toml
algorithms/a100-same-tree/: Cargo.toml
algorithms/a110-balanced-binary-tree/: Cargo.toml
algorithms/a111-minimum-depth-of-binary-tree/: Cargo.toml
algorithms/a112-path-sum/: Cargo.toml
algorithms/a119-pascals-triangle-ii/: Cargo.toml
algorithms/a125-valid-palindrome/: Cargo.toml
algorithms/a226-invert-binary-tree/: Cargo.toml
exercises/: README.md
exercises/blockchain/: Cargo.toml
exercises/blockchain/blockchain_rust_part_1/: Cargo.toml
exercises/blockchain/blockchain_rust_part_1/examples/: gen_bc.rs  gen_bc1.rs
exercises/blockchain/blockchain_rust_part_1/src/blocks/: block.rs  blockchain.rs
exercises/blockchain/blockchain_rust_part_1/src/utils/: serializer.rs
exercises/blockchain/blockchain_rust_part_2/: Cargo.toml
exercises/blockchain/blockchain_rust_part_2/examples/: gen_bc.rs  gen_bc2.rs
exercises/blockchain/blockchain_rust_part_2/src/blocks/: block.rs  blockchain.rs  pow.rs
exercises/blockchain/blockchain_rust_part_2/src/utils/: serializer.rs
exercises/blockchain/blockchain_rust_part_3/: Cargo.toml  README.md
exercises/blockchain/blockchain_rust_part_3/examples/: gen_bc3.rs
exercises/blockchain/blockchain_rust_part_3/src/: lib.rs
exercises/blockchain/blockchain_rust_part_3/src/blocks/: blockchain.rs
exercises/blockchain/blockchain_rust_part_3/src/storage/: mod.rs  sleddb.rs
exercises/blockchain/blockchain_rust_part_3/src/utils/: serializer.rs
exercises/blockchain/blockchain_rust_part_4/: Cargo.toml
exercises/blockchain/blockchain_rust_part_4/examples/: gen_bc4.rs  gen_trx4.rs
exercises/blockchain/blockchain_rust_part_4/src/: lib.rs
exercises/blockchain/blockchain_rust_part_4/src/blocks/: block.rs  blockchain.rs  pow.rs
exercises/blockchain/blockchain_rust_part_4/src/storage/: mod.rs  sleddb.rs
exercises/blockchain/blockchain_rust_part_4/src/transactions/: transaction.rs  tx_input.rs  tx_output.rs  utxo_set.rs
exercises/blockchain/blockchain_rust_part_5/: Cargo.toml
exercises/blockchain/blockchain_rust_part_5/examples/: gen_bc.rs  gen_trx.rs
exercises/blockchain/blockchain_rust_part_5/src/blocks/: block.rs  blockchain.rs
exercises/blockchain/blockchain_rust_part_5/src/storage/: sleddb.rs
exercises/blockchain/blockchain_rust_part_5/src/transactions/: transaction.rs  utxo_set.rs
exercises/blockchain/blockchain_rust_part_5/src/wallets/: wallet.rs  wallets.rs
exercises/blockchain/blockchain_rust_part_6/: Cargo.toml
exercises/blockchain/blockchain_rust_part_6/examples/: gen_bc.rs  gen_trx6.rs
exercises/blockchain/blockchain_rust_part_6/src/: server.rs
exercises/blockchain/blockchain_rust_part_6/src/blocks/: blockchain.rs
exercises/blockchain/blockchain_rust_part_6/src/networks/: behaviour.rs  mod.rs  node.rs
exercises/blockchain/blockchain_rust_part_6/src/storage/: sleddb.rs
exercises/blockchain/blockchain_rust_part_6/src/transactions/: transaction.rs  utxo_set.rs
exercises/blockchain/blockchain_rust_part_6/src/utils/: secret.rs
exercises/blockchain/blockchain_rust_part_6/src/wallets/: wallet.rs  wallets.rs
exercises/blockchain/examples/: gen_bc.rs  gen_trx.rs
exercises/blockchain/src/: lib.rs
exercises/blockchain/src/blocks/: block.rs  blockchain.rs  mod.rs  pow.rs
exercises/blockchain/src/networks/: mod.rs
exercises/blockchain/src/storage/: mod.rs  sleddb.rs
exercises/blockchain/src/transactions/: transaction.rs  tx_input.rs  tx_output.rs  utxo_set.rs
exercises/blockchain/src/utils/: mod.rs  secret.rs  serializer.rs
exercises/blockchain/src/wallets/: mod.rs  wallet.rs  wallets.rs
exercises/grpc-test/: Cargo.toml  README.md  build.rs
exercises/grpc-test/proto/: todo.proto
exercises/grpc-test/src/: client.rs  server.rs
exercises/httpie/: Cargo.toml  README.md
exercises/httpie/src/: main.rs
exercises/learn-axum/: Cargo.toml  README.md  axum.drawio
exercises/learn-axum/examples/: basic.rs
exercises/learn-axum/my-app/: package-lock.json
exercises/learn-axum/src/: extractors.rs  handlers.rs  main.rs  responses.rs
exercises/p2p-exercises/libp2p-learn/: Cargo.toml  README.md
exercises/rust-full-stack/A03-actix-server/wasm-client/: Cargo.toml  LICENSE_MIT  README.md
exercises/rust-full-stack/A03-actix-server/wasm-client/src/: lib.rs
exercises/rust-full-stack/A03-actix-server/wasm-client/src/models/: course.rs
exercises/rust-full-stack/A03-actix-server/wasm-client/www/: index.html  index.js  package-lock.json  package.json
exercises/rust-full-stack/A03-actix-server/webapp/: Cargo.toml
exercises/rust-full-stack/A03-actix-server/webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
exercises/rust-full-stack/A03-actix-server/webapp/static/: register.html  teachers.html
exercises/rust-full-stack/A03-actix-server/webservice/: .env  Cargo.toml  db.sql  sqlx-data.json
exercises/rust-full-stack/A03-actix-server/webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs  state.rs
exercises/rust-full-stack/A03-actix-server/webservice/src/dbaccess/: course.rs  teacher.rs
exercises/rust-full-stack/A03-actix-server/webservice/src/handlers/: course.rs  teacher.rs
exercises/rust-full-stack/A03-actix-server/webservice/src/models/: course.rs  teacher.rs
exercises/rust-full-stack/A04-connect-db/db/: .env  Cargo.toml  db.sql  sqlx-data.json
exercises/rust-full-stack/A04-connect-db/db/src/: main.rs
exercises/thumbor/: Cargo.toml  README.md  abi.proto  build.rs
exercises/thumbor/src/: server1.rs  server2.rs
exercises/thumbor/src/pb/: abi.rs  mod.rs
httpie/: Cargo.toml  README.md
queryer/: Cargo.toml  README.md
queryer/examples/: covid.rs
queryer/src/: dialect.rs
smart-pointer/: Cargo.toml
thumbor/: Cargo.toml
(+185 files in other folders)
