[workspace]
members = [
  "concepts/smart-pointer",
  "concepts/lists",
  "concepts/macros",
  "concepts/macros/hello_macro",
  "concepts/refcell",
  "exercises/httpie",
  "exercises/thumbor",
  "exercises/rust-full-stack/A01-simple-server-client/*",
  "exercises/rust-full-stack/A02-parse-tcp-request/*",
  "exercises/rust-full-stack/A03-actix-server/*",
  "exercises/learn-axum",
]
