[workspace]
members = [
  "concepts/smart-pointer",
  "concepts/lists",
  "concepts/macros",
  "concepts/macros/hello_macro",
  "concepts/refcell",
  "exercises/blockchain/*",
  "exercises/httpie",
  "exercises/grpc-test",
  "exercises/learn-axum",
  "exercises/p2p-exercises/*",
  "exercises/rust-full-stack/A01-simple-server-client/*",
  "exercises/rust-full-stack/A02-parse-tcp-request/*",
  "exercises/rust-full-stack/A03-actix-server/*",
  "exercises/rust-full-stack/A04-connect-db/*",
  "exercises/serde-test",
  "exercises/thumbor",
  "algorithms",
]

# [profile.release]
# # 0: no optimizations
# # 1: basic optimizations
# # 2: some optimizations
# # 3: all optimizations
# # "s": optimize for binary size
# # "z": optimize for binary size, but also turn off loop vectorization.
# opt-level = 3
# 只为某一个包开启优化
[profile.release.package.wasm-game-of-life]
opt-level = "s"
