[package]
edition = "2021"
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bigint = "4.4.3"
bincode = "1.3.3"
chrono = "0.4.19"
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3.14"
