[package]
edition = "2021"
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bigint = "4"
bincode = "1"
bs58 = "0.4"
chrono = "0.4"
futures = "0.3"
libp2p = { version = "0.46", features = ["tcp-tokio"] }
once_cell = "1"
ring = "0.16"
rust-crypto = "0.2"
rustc-serialize = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
