[package]
edition = "2021"
name = "grpc-test"
version = "0.1.0"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
# Rust的Protocol Buffers实现库
prost = "0.11"
# Rust的异步运行时
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
# 一个基于HTTP/2的Rust gRPC库
tonic = "0.8"

[build-dependencies]
# 编译proto文件成Rust代码
tonic-build = "0.8"
