[package]
edition = "2021"
name = "thumbor"
version = "0.1.0"

[[bin]]
name = "server1"
path = "src/server1.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.58" # 错误处理
axum = "0.5.9" # web服务器
base64 = "0.13" # base64编码/解码
bytes = "1.1.0" # 处理字节流
image = "0.24.2" # 处理图片
lazy_static = "1.4.0" # 通过宏更方便的初始化静态变量
lru = "0.7.7" # LRU缓存
percent-encoding = "2.1.0" # url编码/解码
photon-rs = "0.3.1" # 图片效果
prost = "0.10.4" # protobuf 处理
reqwest = "0.11.11" # HTTP client
serde = { version = "1.0.137", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1.19.2", features = ["full"] } # 异步处理
tower = { version = "0.4.13", features = [
  "util",
  "timeout",
  "load-shed",
  "limit"
] } # 服务处理及中间件
tower-http = { version = "0.3.4", features = [
  "add-extension",
  "compression-full",
  "trace"
] } # http中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3.12" # 日志和追踪

[build-dependencies]
prost-build = "0.10.4" # 编译protobuf
