[package]
edition = "2021"
keywords = ["blockchain", "rust", "exercise"]
name = "blockchain_rust_part_4"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bigint = "4"
bincode = "1"
chrono = "0.4"
rust-crypto = "0.2"
serde = {version = "1", features = ["derive"]}
sled = "0.34"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
