[package]
edition = "2021"
name = "libp2p-learn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.46", features=["tcp-tokio"]}
tokio = {version = "1", features = ["full"]}
anyhow = "1"
futures = "0.3"
