[package]
name = "wasm-client"
version = "0.1.0"
authors = ["kaigedong <dongkaige@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = {version="0.4.19", features=["serde"]}
serde ={version="1.0.136", featurs=["derive"]}
serde_derive = "1.0.136"
serde_json = "1.0.79"
# following crate is releated to webassembly
js-sys="0.3.56"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures="0.4.29"
web-sys = {version="0.3.58", features=["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window",
"Document","Element", "HtmlElement", "Node", "console"
]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
