[package]
edition = "2021"
name = "webservice"
version = "0.1.0"
# 当运行webservice时，如果不指定二进制文件，则默认运行下面的配置
default-run = "actix-teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-cors = "0.6" # 跨域
actix-rt = "2"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default_features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "offline"
] }

[[bin]]
name = "actix-teacher-service"
path = "src/bin/teacher-service.rs"
