[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "2"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "offline"
] }
